--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Sorting Hats</title>
 </head>
 <body>
- 
+  <div class="jumbotron">
+    <h1 class="display-4">Welcome to Hoggy Hoggy Warts</h1>
+    <p class="lead">Mudbloods yew pumpkin juice phials Ravenclaw’s Diadem 10 galleons Thieves Downfall. Ministry-of-Magic mimubulus mimbletonia Pigwidgeon knut phoenix feather other minister Azkaban. Hedwig Daily Prophet treacle tart full-moon Ollivanders You-Know-Who cursed. Fawkes maze raw-steak Voldemort Goblin Wars snitch Forbidden forest grindylows wool socks.</p>
+    <hr class="my-4">
+    <p>Come seek us where our voices sound, we cannot sing above the ground, Ginny Weasley bright red. Fanged frisbees, phoenix tears good clean match.</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Let's start sorting!</a>
+    </p>
+  </div>
   
 
 
