added name form

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
   </div>
+  <form>
+    <div class="mb-3">
+      <label for="Name" class="form-label">Name</label>
+      <input type="text" class="form-control" id="name" required>      
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 
 
 
