Created form layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Sorting Hats</title>
 </head>
 <body>
+  <!-- ****Jumbotron**** -->
   <div class="jumbotron">
     <h1 class="display-4">Welcome to Hoggy Hoggy Warts</h1>
     <p class="lead">Mudbloods yew pumpkin juice phials Ravenclaw’s Diadem 10 galleons Thieves Downfall. Ministry-of-Magic mimubulus mimbletonia Pigwidgeon knut phoenix feather other minister Azkaban. Hedwig Daily Prophet treacle tart full-moon Ollivanders You-Know-Who cursed. Fawkes maze raw-steak Voldemort Goblin Wars snitch Forbidden forest grindylows wool socks.</p>
@@ -17,6 +18,20 @@
       <a class="btn btn-primary btn-lg" href="#" role="button">Let's start sorting!</a>
     </p>
   </div>
+
+  <!-- ****FORM**** -->
+  <form>
+    <div class="student-form">
+      <h1>Enter First Year's Name</h1>
+      <div class="row mb-3">
+      <label for="student-name" class="col-sm-2 col-form-label">Student:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="student-name" required>
+      </div>
+      </div>
+      <button type="button" class="btn btn-secondary" id="sort-btn">Sort!</button>
+    </div>
+  </form>
   
 
 
