--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Hogwarts</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">Today we will assign you to your group house.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
       </div>
 
-      <div id="startButton">
-        <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
+      <div id="start-Button">
+        <button type="button" class="btn btn-primary btn-lg">Get Started</button>
       </div>
+
+      <form>
+        <div class="form-name">
+          <label for="inputName">Name</label>
+          <input type="name" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Enter name">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>  
   <script src="main.js"></script>
