--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 
 <body>
 
+    <div class="container">
+        <div class="sorting-hat-insttructions">
+            <div class="welcome-message">
+
+            </div>
+
+            <hr />
+            <div class="message-spell">
+
+            </div>
+            <button type="start" class="btn btn-secondary">Let's Start Sorting</button>
+        </div>
+        <div class="enter-first-years-name">
+
+            <button type="sort" class="btn btn-secondary">Sort</button>
+        </div>
+        <div class="names-of-first-years mb-5">
+
+        </div>
+
+
+    </div>
+
+
 
 
 
