added jumbotron, basic form layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,8 +14,37 @@
     <title>The Sorting Hat</title>
   </head>
   <body>
+    <!-- JUMBOTRON -->
+    <div class="jumbotron text-center jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Welcome to Hogwarts!</h1>
+        <p class="lead">
+          Welcome First-years, now begins the Sorting Ceremony.
+        </p>
+        <hr class="my-4" />
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">
+            START SORTING </a>
+        </p>
+      </div>
+    </div>
 
-    
+    <!-- FORM -->
+    <form >
+      <div class="form-group ">
+        <label for="formGroupExampleInput">Example label</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Another label</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+      </div>
+      <button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+    </form>
+
+    <!-- STUDENT CARDS -->
+
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
