--- a/index.html
+++ b/index.html
@@ -4,28 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
   <title>sorting hat</title>
 </head>
 <body>
   <h1>SORTING HAT</h1>
-
-  <div class="jumbotron">
+ <!-- JUMBOTRON -->
+  <div class="jumbotron ">
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Let's start sorting!</a>
     </p>
   </div>
-  <form>
-    <div class="mb-3">
-      <label for="Name" class="form-label">Name</label>
-      <input type="text" class="form-control" id="name" required>      
+
+  <!-- STUDENT ENTRY FORM -->
+  <div class="student-form mb-3">
+    <h2 class="text-justify">Enter First Year's Name</h2>
+    <form id="student-form">
+    <div class="d-flex justify-content-around">  
+        <label for="Name" class="form-label">Student:</label>
+        <input type="text" class="form" id="name" required>  
+        <button type="submit" class="btn btn-primary">Sort!</button>    
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    </form>
+  </div>
+ 
+  <!-- HOUSE ASSIGNMENT CARDS -->
+
+<div class="card-container">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title d-flex justify-content-around">First Year's Name</h5>
+      <p class="card-text d-flex justify-content-around">Assigned House</p>
+      <a href="#" class="btn btn-primary d-flex justify-content-around">Expel</a>
+    </div>
+  </div>
+</div>
+
+
 
 
 
