--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,shrink-to-fit=no"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,26 +27,83 @@
         <hr class="my-4" />
         <p class="lead">
           <a class="btn btn-primary btn-lg" href="#" role="button">
-            START SORTING </a>
+            START SORTING
+          </a>
         </p>
       </div>
     </div>
 
     <!-- FORM -->
-    <form >
-      <div class="form-group ">
+    <form>
+      <div class="form-group">
         <label for="formGroupExampleInput">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput"
+          placeholder="Example input"
+        />
       </div>
       <div class="form-group">
         <label for="formGroupExampleInput2">Another label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput2"
+          placeholder="Another input"
+        />
       </div>
-      <button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+      <button type="submit" class="btn btn-primary mb-2">
+        Confirm identity
+      </button>
     </form>
 
     <!-- STUDENT CARDS -->
 
+    <div class="card-container d-flex p-4">
+      <div class="student-cards row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- <div class="card-container d-flex p-4">
+      <div class="student-cards">
+        <div class="display-student-cards d-flex flex-wrap justify-content-center">
+          <div class="card">
+            <h5 class="card-title">Student Name</h5>
+            <p class="card-text">House Name</p>
+            <a href="#" class="btn btn-primary">EXPEL</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="voldemort-cards">
+        <div class="display-voldemort-cards d-flex flex-wrap justify-content-center">
+          <div class="card">
+            <h5 class="card-title">Student Name</h5>
+            <p class="card-text">House Name</p>
+            <a href="#" class="btn btn-primary">EXPEL</a>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
