--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
   <link rel="stylesheet" href="main.css">
   <title>Sorting-Hat</title>
 </head>
 
 <body>
 
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" id="jumbotron">
     <h1 class="display-4">I say Hog! You say Warts! HOG!</h1>
     <p class="lead">Welcome to the Hogwarts School of Witchcraft and Wizardy! I'm the Sorting Hat and I'm going to do
       just that! An honor such as this is a wonderful way for the school and community to recognize and celebrate the
@@ -24,42 +24,49 @@
     </p>
   </div>
 
-  <div style="display: none;" id="myForm">
-    <div class="mb-3 justify-content-center">
-      <div class="form-body text-center">
-        <!-- Need to place the elements of the form within it's own card container so they can manipulated within the form itself. -->
-        <h3>
-          Speak Thy First and Last Name
-        </h3>
-        <div class="d-flex col-md-6 offset-md-3">
-          <!-- all divs are divided into 12 columns. The numbers 1-12 represent a portion of the total width of any div. col-md = column adjust to a medium screen. An offset is used to push columns over for more spacing. offeset-md-3 pushes the form to the 3rd columns of 12. -->
-          <label for="studentName" class="form-label">Student's Name:</label>
-          <input type="text" class="form-control" id="studentName" placeholder="Jean-Luc Picard" required="">
-          <button type="submit" class="btn btn-primary" id="sort">SORT ME</button>
+  <form>
+    <div style="display: none;" id="myForm">
+      <div class="mb-3 justify-content-center">
+        <div class="form-body text-center">
+          <!-- Need to place the elements of the form within it's own card container so they can manipulated within the form itself. -->
+          <h3>
+            Speak Thy First and Last Name
+          </h3>
+          <div class="d-flex col-md-6 offset-md-3">
+            <!-- all divs are divided into 12 columns. The numbers 1-12 represent a portion of the total width of any div. col-md = column adjust to a medium screen. An offset is used to push columns over for more spacing. offeset-md-3 pushes the form to the 3rd columns of 12. -->
+            <label for="studentName" class="form-label">Student's Name:</label>
+            <input type="text" class="form-control" id="studentName" placeholder="Jean-Luc Picard" required="">
+            <button type="submit" class="btn btn-primary" id="sort">SORT ME</button>
 
 
+          </div>
         </div>
       </div>
     </div>
+  </form>
 
+  <div class="container mt-3 text-center" id="all-student-cards">
+    <div class="cards d-center p-4">
+      <!-- adds padding of 4 on all sides of the card.-->
+      <div class="new-cards">
+        <h4>First Year's</h4>
+        <div id="first-years-card-display" class="d-flex flex-wrap justify-content-center">
+        </div>
+      </div>
+      <div id="new-student" class="d-flex flex-wrap justify-content-around"></div>
+    </div>
 
-  </div>
-
-  <div class="cards d-flex p-4"><!-- adds padding of 4 on all sides of the card.-->
-    <div class="new-student-cards">
-      <h4>First Year's</h4>
-      <div id="first-years-card-display" class="d-flex flex-wrap justify-content-center">
+    <div class="cards d-center p-4">
+      <!-- adds padding of 4 on all sides of the card.-->
+      <div class="voldemorts-cards">
+        <h4>Voldemort's (Yeah, I said it) Army</h4>
+        <div id="voldermorts-army" class="d-flex flex-wrap justify-content-center mb-5">
+        </div>
       </div>
     </div>
   </div>
 
-   <div class="cards d-flex p-4"> <!-- adds padding of 4 on all sides of the card.-->
-    <div class="voldemorts-cards">
-      <h4>Voldemort's (Yeah, I said it) Army</h4>
-      <div id="voldermorts-army" class="d-flex flex-wrap justify-content-center mb-5">
-      </div>
-    </div>
-  </div>
+
 
 
 
@@ -67,9 +74,8 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous">
-  </script>
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+    </script>
 
   <script src="main.js"></script>
 </body>
