hide error message when for is reset

--- a/index.html
+++ b/index.html
@@ -32,21 +32,16 @@
           <h3>
             Speak Thy First and Last Name
           </h3>
-          
+
           <div class="d-flex col-md-6 offset-md-3">
             <!-- all divs are divided into 12 columns. The numbers 1-12 represent a portion of the total width of any div. col-md = column adjust to a medium screen. An offset is used to push columns over for more spacing. offeset-md-3 pushes the form to the 3rd columns of 12. -->
             <label for="studentName" class="form-label">Student's Name:</label>
             <input type="text" class="form-control mx-3 mb-2" id="studentName" placeholder="David Copperfield" required>
             <button type="submit" class="btn btn-primary mb-2" id="sort">SORT ME</button>
           </div>
-          <div id="error-message">
-            <div style="color: red;margin-bottom: 10px;">
-              <b>Don't be shy! Say your name.</b>
-            </div>
-          </div>
+          <div id="error-message"> </div>
         </div>
       </div>
-    </div>
     </div>
   </form>
 
