--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ****Jumbotron**** -->
   <div class="jumbotron">
     <h1 class="display-4">Welcome to Hoggy Hoggy Warts</h1>
-    <p class="lead">Mudbloods yew pumpkin juice phials Ravenclaw’s Diadem 10 galleons Thieves Downfall. Ministry-of-Magic mimubulus mimbletonia Pigwidgeon knut phoenix feather other minister Azkaban. Hedwig Daily Prophet treacle tart full-moon Ollivanders You-Know-Who cursed. Fawkes maze raw-steak Voldemort Goblin Wars snitch Forbidden forest grindylows wool socks.</p>
+    <p class="lead align-content-center">Mudbloods yew pumpkin juice phials Ravenclaw’s Diadem 10 galleons Thieves Downfall. Ministry-of-Magic mimubulus mimbletonia Pigwidgeon knut phoenix feather other minister Azkaban. Hedwig Daily Prophet treacle tart full-moon Ollivanders You-Know-Who cursed. Fawkes maze raw-steak Voldemort Goblin Wars snitch Forbidden forest grindylows wool socks.</p>
     <hr class="my-4">
     <p>Come seek us where our voices sound, we cannot sing above the ground, Ginny Weasley bright red. Fanged frisbees, phoenix tears good clean match.</p>
     <p class="lead">
@@ -26,11 +26,10 @@
       <div class="row mb-3">
       <label for="student-name" class="col-sm-2 col-form-label">Student:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="student-name" required>
+        <input type="text" class="form-control d-inline" id="student-name" required>
       </div>
       </div>
       <button type="button" class="btn btn-secondary" id="sort-btn">Sort!</button>
-      </div>
     </form>
   </div>
 
