--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
   <div class="jumbotron text-center flex-wrap" id="jumbotron">
     <h1 style="color: rgb(240, 223, 154);" class="display-4">I say Hog! You say Warts! HOG!</h1>
     <p style="color: rgb(240, 223, 154);" class="lead">Welcome to the Hogwarts School of Witchcraft and Wizardry! I'm
@@ -51,7 +50,7 @@
 
     <div class="new-student-cards">
       <!-- adds padding of 4 on all sides of the card.-->
-      <h4 style="color: wheat; font-family: ;">First Year's</h4>
+      <h4 style="color: wheat; font-family: ;">First Years</h4>
       <div id="first-years-card-display" class="d-flex flex-wrap justify-content-center">
       </div>
     </div>
@@ -64,6 +63,9 @@
     </div>
 
   </div>
+
+  <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden; display: none;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"> </iframe> </div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
