--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="main.css" />
-
     <title>The Sorting Hat</title>
   </head>
   <body>
@@ -34,40 +33,35 @@
     </div>
 
     <!-- FORM -->
-    <form>
-      <div class="form-group">
-        <label for="formGroupExampleInput">Example label</label>
-        <input
-          type="text"
-          class="form-control"
-          id="formGroupExampleInput"
-          placeholder="Example input"
-        />
-      </div>
-      <div class="form-group">
-        <label for="formGroupExampleInput2">Another label</label>
-        <input
-          type="text"
-          class="form-control"
-          id="formGroupExampleInput2"
-          placeholder="Another input"
-        />
-      </div>
-      <button type="submit" class="btn btn-primary mb-2">
-        Confirm identity
-      </button>
-    </form>
+    <div class="form-container p-4">
+      <form>
+        <div class="form-group">
+          <div></div>
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInput"
+            placeholder="Example input"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">
+          Confirm identity
+        </button>
+      </form>
+    </div>
 
     <!-- STUDENT CARDS -->
-
     <div class="card-container d-flex p-4">
       <div class="student-cards row">
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">
+                With supporting text below as a natural lead-in to additional
+                content.
+              </p>
+              <a href="#" class="btn btn-primary">EXPEL</a>
             </div>
           </div>
         </div>
@@ -76,12 +70,11 @@
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">EXPEL</a>
             </div>
           </div>
         </div>
       </div>
-
     </div>
     <!-- <div class="card-container d-flex p-4">
       <div class="student-cards">
