--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
   <div class="jumbotron text-center flex-wrap" id="jumbotron">
     <h1 style="color: rgb(240, 223, 154);" class="display-4">I say Hog! You say Warts! HOG!</h1>
     <p style="color: rgb(240, 223, 154);" class="lead">Welcome to the Hogwarts School of Witchcraft and Wizardry! I'm
@@ -64,10 +65,10 @@
 
   </div>
 
-  <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden; display: none;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"> </iframe> </div>
+  <div id="background-music" style="display: none;">
+  <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq?autoplay=1" allow="autoplay"> </iframe></div>
 
-
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
