create student cards works

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <hr class="my-4">
     <p>Come seek us where our voices sound, we cannot sing above the ground, Ginny Weasley bright red. Fanged frisbees, phoenix tears good clean match.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button" id="start-btn">Let's start sorting!</a>
+      <a class="btn btn-primary btn-lg" href="#" role="button" id="startBtn">Let's start sorting!</a>
     </p>
   </div>
 
   <!-- ****FORM**** -->
-  <div class="student-form">
+  <div id="studentForm">
     <form>
       <h1>Enter First Year's Name</h1>
       <div class="row mb-3">
       <label for="student-name" class="col-sm-2 col-form-label">Student:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control d-inline" id="student-name" required>
+        <input type="text" class="form-control d-inline" id="studentName" required>
       </div>
       </div>
-      <button type="button" class="btn btn-secondary" id="sort-btn">Sort!</button>
+      <button type="button" class="btn btn-secondary" id="sortBtn">Sort!</button>
     </form>
   </div>
 
   <!-- not sure if this is correct or not -->
-  <div id="students" class="d-flex flex-wrap justify-content-around"></div>
+  <div id="studentList" class="d-flex flex-wrap justify-content-around"></div>
     
   
 
