added background music that starts on click

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="new-student-cards">
       <!-- adds padding of 4 on all sides of the card.-->
-      <h4 style="color: wheat; font-family: ;">First Years</h4>
+      <h4 style="color: wheat; font-family: Harry Potter;">First Years</h4>
       <div id="first-years-card-display" class="d-flex flex-wrap justify-content-center">
       </div>
     </div>
@@ -64,10 +64,12 @@
 
   </div>
 
-  <div id="background-music" style="display: none;">
-  <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq?autoplay=1" allow="autoplay"> </iframe></div>
+  <div style="display: none;">
+    <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;"    frameborder="0"
+      type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq" class="embed-responsive-item" data-play="0" id="background-music" allow="autoplay"> </iframe>
+  </div>
 
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
