--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0,shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="main.css" />
+
     <title>The Sorting Hat</title>
   </head>
   <body>
@@ -24,6 +22,7 @@
           Welcome First-years, now begins the Sorting Ceremony.
         </p>
         <hr class="my-4" />
+
         <button
           class="btn btn-primary btn-lg"
           href="#"
@@ -31,6 +30,7 @@
           onclick="showForm()"
         >START SORTING
         </button>
+      
       </div>
     </div>
 
@@ -79,29 +79,13 @@
             </div>
           </div>
         </div>
+    <form >
+      <div class="form-group ">
+        <label for="formGroupExampleInput">Example label</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
       </div>
-    </div>
-    <!-- <div class="card-container d-flex p-4">
-      <div class="student-cards">
-        <div class="display-student-cards d-flex flex-wrap justify-content-center">
-          <div class="card">
-            <h5 class="card-title">Student Name</h5>
-            <p class="card-text">House Name</p>
-            <a href="#" class="btn btn-primary">EXPEL</a>
-          </div>
-        </div>
-      </div>
+    <!-- STUDENT CARDS -->
 
-      <div class="voldemort-cards">
-        <div class="display-voldemort-cards d-flex flex-wrap justify-content-center">
-          <div class="card">
-            <h5 class="card-title">Student Name</h5>
-            <p class="card-text">House Name</p>
-            <a href="#" class="btn btn-primary">EXPEL</a>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
