created delete button, but it's not deleting last entry....

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
       <hr />
       <p>Now sit your butt down and put on this hat. :)</p>
-      <button onclick="showForm()" type="button" class="btn btn-primary">Lets Get Shtarted</button>
+      <button onclick="showForm()" type="button" class="btn btn-primary">Let's Get Shtarted</button>
     </div>
     <!-- Form -->
     <div id="sortingDiv" class="g-3 align-items-center text-center">
