added commit at end of night

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             placeholder="Example input"
           />
         </div>
-        <button type="submit" class="btn btn-primary mb-2">
-          Confirm identity
-        </button>
+        <button type="submit" class="btn btn-primary mb-2">SORT</button>
       </form>
     </div>
 
@@ -80,10 +78,6 @@
           </div>
         </div>
     <form >
-      <div class="form-group ">
-        <label for="formGroupExampleInput">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-      </div>
     <!-- STUDENT CARDS -->
 
 
