--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
     <div class="new-student-cards">
       <!-- adds padding of 4 on all sides of the card.-->
-      <h4 style="color: wheat; font-family: Harry Potter;">First Years</h4>
+      <h4 style="color: rgb(240, 223, 154); font-family: Harry Potter;">First Years</h4>
       <div id="first-years-card-display" class="d-flex flex-wrap justify-content-center">
       </div>
     </div>
 
     <div class="voldermort-cards">
       <!-- adds padding of 4 on all sides of the card.-->
-      <h4 style="color: wheat;">Voldemort's (Yeah, I said it) Army</h4>
+      <h4 style="color:  rgb(240, 223, 154);">Voldemort's (Yeah, I said it) Army</h4>
       <div id="voldermorts-army" class="d-flex flex-wrap justify-content-center">
       </div>
     </div>
@@ -65,10 +65,17 @@
   </div>
 
   <div style="display:none;">
-    <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;"    frameborder="0"
-      type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq" class="embed-responsive-item" data-play="0" id="background-music" allow="autoplay"> </iframe>
+    <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;" frameborder="0"
+      type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq" class="embed-responsive-item" data-play="0"
+      id="background-music" allow="autoplay"> </iframe>
   </div>
-  
+
+  <div style="display: none;">
+    <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0"
+      type="text/html" src="https://www.dailymotion.com/embed/video/xovk9r" class="embed-responsive-item" data-play="0" id="dramatic" allow="autoplay">
+    </iframe>
+  </div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
