added more sounds

--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
 
   <div style="display: none;">
     <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0"
-      type="text/html" src="https://www.dailymotion.com/embed/video/xovk9r" class="embed-responsive-item" data-play="0" id="dramatic" allow="autoplay">
+      type="text/html" src="https://www.dailymotion.com/embed/video/xovk9r" class="embed-responsive-item" data-play="0"
+      id="dramatic" allow="autoplay">
     </iframe>
+  </div>
+
+  <div style="display: none;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7mi4h00fedY" frameborder="0"
+      id = "excellent" allow="autoplay"></iframe>
   </div>
 
 
