added click functionality to the sound effects

--- a/index.html
+++ b/index.html
@@ -78,10 +78,24 @@
   </div>
 
   <div style="display: none;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7mi4h00fedY" frameborder="0"
-      id = "excellent" allow="autoplay"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7mi4h00fedY" frameborder="0" id="excellent"
+      allow="autoplay"></iframe>
   </div>
 
+  <div style="display: none;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sk6_M9bUx7U" frameborder="0" id="snake-sound"
+      allow="autoplay"></iframe>
+  </div>
+
+  <div style="display: none;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4sw23ODXIQI" frameborder="0" id="kitty"
+      allow="autoplay"></iframe>
+  </div>
+
+  <div style="display: none;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/teXK2kOCkU8" frameborder="0" id="bird-noise"
+      allow="autoplay"></iframe>
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
