safety commit before bed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div style="display:none;">
     <iframe style="width:50%;height:50%;position: absolute;;left:0px;top:0px;overflow:hidden;" frameborder="0"
       type="text/html" src="https://www.dailymotion.com/embed/video/x3ulbtq" class="embed-responsive-item" data-play="0"
-      id="background-music" allow="autoplay"> </iframe>
+      id="background-music" allow="autoplay" player.setVolume(volume:20):Void;  > </iframe>
   </div>
 
   <div style="display: none;">
@@ -79,7 +79,7 @@
 
   <div style="display: none;">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/7mi4h00fedY" frameborder="0" id="excellent"
-      allow="autoplay"></iframe>
+      allow="autoplay" ></iframe>
   </div>
 
   <div style="display: none;">
