printing to dom

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Hogwarts</h1>
         <p class="lead">Today we will assign you to your group house.</p>
-        <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+        <button type="button" class="btn btn-primary btn-lg" id="getStarted">Get Started</button>
     </div>
       
     </div>
-
-    <form>
+    <form id="infoForm">
         <div class="form-name">
            <label for="inputName">Please enter your name:</label>
            <input type="name" class="form-control" id="inputName" aria-describedby="nameHelp"      placeholder="EnterName">
