added printToDom started getFormInfo student builder

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
           <input
             type="text"
             class="form-control"
-            id="formGroupExampleInput"
-            placeholder="Example input"
+            id="student-name"
+            placeholder="Student Name Here"
           />
         </div>
         <button type="submit" class="btn btn-primary mb-2">SORT</button>
       </form>
     </div>
 
-    <!-- STUDENT CARDS -->
+    <!-- STUDENT CARDS
     <div class="card-container d-flex p-4">
       <div class="student-cards row">
         <div class="col-sm-6">
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-    <form >
+    <form > -->
     <!-- STUDENT CARDS -->
 
 
