--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Sorting Hats</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
   <body>
@@ -20,6 +21,7 @@
           <p>Click the button below to be sorted into one of our four student houses at Hogwarts</p>
           <p class="lead">
             <a class="btn btn-primary btn-lg" href="#" role="button">Sort Hat!</a>
+            <button class="delete" type="button" id="delete">Delete</button>
           </p>
         </div>
       </section>
