--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button
           class="btn btn-primary btn-lg"
           href="#"
-          role="button"
+          type="button"
           onclick="showForm()"
         >START SORTING
         </button>
@@ -38,47 +38,20 @@
     <div class="form-container p-4">
       <form id="formElement" style="display: none">
         <div class="form-group">
-          <div></div>
           <input
             type="text"
             class="form-control"
             id="student-name"
             placeholder="Student Name Here"
+            required
           />
         </div>
-        <button type="submit" class="btn btn-primary mb-2">SORT</button>
+        <button type="button" class="btn btn-primary mb-2" id='sort'>SORT</button>
       </form>
     </div>
 
-    <!-- STUDENT CARDS
-    <div class="card-container d-flex p-4">
-      <div class="student-cards row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">EXPEL</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">EXPEL</a>
-            </div>
-          </div>
-        </div>
-    <form > -->
-    <!-- STUDENT CARDS -->
+    <!-- STUDENT CONTAINER -->
+    <div id="studentContainer"></div>
 
 
     <script
