Added lots of logic to our JS. Created multiple functions.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,29 @@
 
 <body>
   <div class="jumbotron jumbotron-fluid">
-  <div class="jumbotron">
-    <h1 class="display-4">It's Sorting Time!</h1>
-    <p class="lead">Locomotor tergeo tarantallegra expecto portus impedimenta. Muffliato tarantallegra immobilus scintillation. Lacarnum alohomora crucio vow wingardium exume charm- reducio lacarnum.</p>
-    <hr class="my-4">
-    <p>Locomotor lumos serpensortia rictusempra immobilus aparecium imperio. Stupefy finite mobilicorpus.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Let's get to sorting!</a>
-    </p>
+    <div class="jumbotron">
+      <h1 class="display-4">It's Sorting Time!</h1>
+      <p class="lead">Locomotor tergeo tarantallegra expecto portus impedimenta. Muffliato tarantallegra immobilus
+        scintillation. Lacarnum alohomora crucio vow wingardium exume charm- reducio lacarnum.</p>
+      <hr class="my-4">
+      <p>Locomotor lumos serpensortia rictusempra immobilus aparecium imperio. Stupefy finite mobilicorpus.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Let's get to sorting!</a>
+      </p>
+    </div>
   </div>
-</div>
+
+
+  <form>
+    <div class="mb-3">
+      <label for="studentName" class="form-label">Enter First Year's Name!</label>
+      <input type="text" class="form-control" placeholder="name" id="studentName">
+      <button type="submit" class="btn btn-primary" id="sortBtn">Sort!</button>
+    </div>
+  </form>
+
+  <div id ="studentCards"></div>
+
 
 
 
