added toggle function to form

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" type="button">Let's start sorting!</a>
+      <a class="btn btn-primary btn-lg" href="#" role="button" onclick="toggleFunc()">Let's start sorting!</a>
     </p>
   </div>
 
-  <form>
+  <form id="hiddenForm">
     <div class class="mb-3">
       <label for="studentName" class="form-label">Enter Student's Name</label>
       <input type="text" class="form-control" placeholder="name" id="studentName">
