fixed toggle func so that form is initially hidden

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </p>
   </div>
 
-  <form id="hiddenForm">
-    <div class class="mb-3">
+  <form>
+    <div id="hiddenForm" style="display:none" class="mb-3">
       <label for="studentName" class="form-label">Enter Student's Name</label>
       <input type="text" class="form-control" placeholder="name" id="studentName">
       <button type="submit" id="sortBtn" class="btn btn-primary">Sort!</button>
