fixed error codes in the console.

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
           <p>Click the button below to be sorted into one of our four student houses at Hogwarts</p>
           <p class="lead">
             <a class="btn btn-primary btn-lg" href="#" role="button">Sort Hat!</a>
-            <button class="delete" type="button" id="delete">Delete</button>
           </p>
         </div>
       </section>
 
       <section>
-        <div id="form" class="d-flex justify-content-center"></div>
+        <div id="sort-hat" class="d-flex justify-content-center"></div>
         
-        <div id="students" class="d-flex flex-wrap"></div>
+        <div id="hats" class="d-flex flex-wrap"></div>
       </section>
     </article>
 
