got my student cards to render in the Dom. I had a id=name mispelling and fixed the issue and everything is working now.

--- a/index.html
+++ b/index.html
@@ -12,25 +12,21 @@
 
     <header>Sorting Hats</header>
 
-    <article>
-      <section>
+
         <div class="jumbotron">
           <h1 class="display-4">Welcome to Hogwarts</h1>
-          <p class="lead">You are safe for I am a Thinking Cap!</p>
+          <p class="lead">I am a Thinking Cap!</p>
           <hr class="my-4">
           <p>Click the button below to be sorted into one of our four student houses at Hogwarts</p>
           <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Sort Hat!</a>
+            <a id="sort" type="submit" class="btn btn-primary btn-lg" href="#" role="button">Sort Hat!</a>
           </p>
         </div>
-      </section>
 
-      <section>
-        <div id="sort-hat" class="d-flex justify-content-center"></div>
+        <div id="form" class="d-flex justify-content-center"></div>
         
-        <div id="hats" class="d-flex flex-wrap"></div>
-      </section>
-    </article>
+        <div id="students" class="d-flex flex-wrap"></div>
+
 
     <footer></footer>
 
