Started on the house randomizer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <hr class="my-4">
       <p>Locomotor lumos serpensortia rictusempra immobilus aparecium imperio. Stupefy finite mobilicorpus.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Let's get to sorting!</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button" id="pleaseToggle">Let's get to sorting!</a>
       </p>
     </div>
   </div>
