can't seem to fix this jumbotron bug

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="card-sets">
       <!-- Student Cards -->
       <p>Students</p>
-      <div id="studentCards"></div>
+      <div id="studentCards" class="card-div"></div>
       <!-- Expelled Cards -->
       <p>Expelled</p>
-      <div id="expelledCards"></div>
-    </div>
+      <div id="expelledCards" class="card-div"></div>
+    <!-- </div> -->
 
     <!-- Bootstrap -->
     <script
