expelled students join Marvel fanbase - bc Voldemort doesn't even want them. Form display none broke! Centered cards with Bootstrap flexbot

--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
       </form>
     </div>
     <!-- Container for Card Groups -->
-    <div class="card-sets">
+    <div class="d-flex flex-row justify-content-center">
       <!-- Student Cards -->
-      <p>Students</p>
-      <div id="studentCards" class="card-div"></div>
+      <div id="studentCards" class="align-text-center"></div>
       <!-- Expelled Cards -->
-      <p>Expelled</p>
-      <div id="expelledCards" class="card-div"></div>
+      <div id="expelledCards" class="align-text-center"></div>
     <!-- </div> -->
 
     <!-- Bootstrap -->
