--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <hr class="my-4">
       <p>Locomotor lumos serpensortia rictusempra immobilus aparecium imperio. Stupefy finite mobilicorpus.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg rounded-lg btn-outline-dark form-text alert-info" href="#" role="button" id="pleaseToggle">Let's get
+        <a class="btn btn-primary btn-lg rounded-lg btn-outline-dark form-text alert-info" href="#" role="button"
+          id="pleaseToggle">Let's get
           to sorting!</a>
       </p>
     </div>
@@ -29,15 +30,19 @@
 
   <form id="toggle" style="display: none;">
     <div class="mb-1" text>
-      <label for="studentName" class="btn btn-primary btn-outline-info rounded-lg btn-outline-dark form-text alert-info" >Enter First Year's Name!</label>
-      <input type="text" class="form-control text-center align-content-around btn btn-outline-light" cardstyle="width: 10rem" placeholder="Enter Name" id="studentName" required>
-      <button type="submit" class="btn btn-primary btn-sm rounded-sm btn-outline-dark form-text alert-info" id="sortBtn">Sort!</button>
+      <label for="studentName"
+        class="btn btn-primary btn-outline-info rounded-lg btn-outline-dark form-text alert-info">Enter First Year's
+        Name!</label>
+      <input type="text" class="form-control text-center align-content-around btn btn-outline-light"
+        cardstyle="width: 10rem" placeholder="Enter Name" id="studentName" required>
+      <button type="submit" class="btn btn-primary btn-sm rounded-sm btn-outline-dark form-text alert-info"
+        id="sortBtn">Sort!</button>
     </div>
   </form>
 
   <div id="requiredAlert"></div>
   <div class="display flex flex-row" id="studentCards"></div>
-  
+
 
 
 
