CSS styling expelled student function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1 class="display-4">Welcome to Hogwarts</h1>
           <p class="lead">I am a Thinking Cap!</p>
           <hr class="my-4">
-          <p>Click the button below to be sorted into one of our four student houses at Hogwarts</p>
+          <p>Click the button below to be sorted into one of our four student houses at Hogwarts!</p>
           <p class="lead">
             <a id="sort" type="submit" class="btn btn-primary btn-lg" href="#" role="button">Sort Hat!</a>
           </p>
